fixed the missalignment on the bootstrap modal

--- a/Frontend/css/main.css
+++ b/Frontend/css/main.css
@@ -1,6 +1,6 @@
 * {
-	margin: 0 !important;
-	padding: 0 !important;
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
 }
 
@@ -11,6 +11,8 @@ html, body {
 }
 
 #navigator {
+	margin: 0 !important;
+	padding: 0 !important;
 	display: flex;
 	justify-content: center;
 	height: 10vh;
@@ -22,6 +24,8 @@ html, body {
 }
 
 .navbar-brand-custom {
+	margin: 0 !important;
+	padding: 0 !important;
 	padding: 0.7rem !important;
 	border: 1px solid white;
 	border-radius: 8px;
